fix overflow in navbar

--- a/templates/static/styles.css
+++ b/templates/static/styles.css
@@ -112,6 +112,7 @@ nav ul {
     margin: 0 0;
     padding: 0 0;
     list-style-type: none;
+    overflow: auto;
 }
 
 nav .nav-home {
